--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <h1>SRFI 61: A more general cond clause</h1>
     <p class="authors">by Taylor Campbell</p>
-    <p class="status">status: <em>final</em> (2005/7/21)</p>
+    <p class="status">status: <em>final</em> (2005-07-21)</p>
 
     <ul class="info">
       <li><a href="srfi-61.html">The SRFI Document</a></li>
