--- a/srfi-61.html
+++ b/srfi-61.html
@@ -22,10 +22,10 @@
 
 <H1>Status</H1>
 <p>This SRFI is currently in ``final'' status.  To see an explanation of
-each status that a SRFI can hold, see <a href="http://srfi.schemers.org/srfi-process.html">here</a>.
+each status that a SRFI can hold, see <a href="https://srfi.schemers.org/srfi-process.html">here</a>.
 You can access previous messages via
 <a href="mail-archive/maillist.html">the archive of the mailing list</a>.</p>
-<ul>	<li>Received: <a href="http://srfi.schemers.org/srfi-61/srfi-61-1.1.txt">2005-01-04</a></li>
+<ul>	<li>Received: <a href="https://srfi.schemers.org/srfi-61/srfi-61-1.1.txt">2005-01-04</a></li>
 	<li>Draft: 2005-01-03--2005-03-04</li>
         <li>Final: 2005-07-21</li>
 </ul>
