--- a/srfi-61.html
+++ b/srfi-61.html
@@ -21,10 +21,8 @@
 
 
 <H1>Status</H1>
-<p>This SRFI is currently in ``final'' status.  To see an explanation of
-each status that a SRFI can hold, see <a href="https://srfi.schemers.org/srfi-process.html">here</a>.
-You can access previous messages via
-<a href="mail-archive/maillist.html">the archive of the mailing list</a>.</p>
+
+<p>This SRFI is currently in <em>final</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+61+at+srfi+dotschemers+dot+org">srfi-61@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-61">archive</a>.</p>
 <ul>	<li>Received: <a href="https://srfi.schemers.org/srfi-61/srfi-61-1.1.txt">2005-01-04</a></li>
 	<li>Draft: 2005-01-03--2005-03-04</li>
         <li>Final: 2005-07-21</li>
