--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p class="authors">by Taylor Campbell</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2005-07-21)</p>
+    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=binding][Binding]], [[https://srfi.schemers.org/?keywords=control-flow][Control Flow]]</p>
 
     <ul class="info">
       <li><a href="srfi-61.html">The SRFI Document</a></li>
