--- a/srfi-61.html
+++ b/srfi-61.html
@@ -1,26 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<html>
+<html lang="en">
   <head>
     <title>SRFI 61: A more general COND clause</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/srfi.css" type="text/css" />
+    <link rel="stylesheet" href="https://srfi.schemers.org/srfi.css" type="text/css" />
+    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
   </head>
 
   <body>
 
 
-<H1>Title</H1>
-
-<p>A more general <code>cond</code> clause</p>
+<h1><a href="https://srfi.schemers.org/"><img class="srfi-logo" src="https://srfi.schemers.org/srfi-logo.svg" alt="SRFI surfboard logo" /></a>61: A more general <code>cond</code> clause</h1>
 
 
-<H1>Author</H1>
-
-<p>Taylor Campbell</p>
+<p>by Taylor Campbell</p>
 
 
-<H1>Status</H1>
+<h2>Status</h2>
 
 <p>This SRFI is currently in <em>final</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+61+at+srfi+dotschemers+dot+org">srfi-61@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-61">archive</a>.</p>
 <ul>	<li>Received: <a href="https://srfi.schemers.org/srfi-61/srfi-61-1.1.txt">2005-01-04</a></li>
@@ -29,14 +26,14 @@
 </ul>
 
 
-<H1>Abstract</H1>
+<h2>Abstract</h2>
 
 <p>This SRFI proposes an extension to the <code>cond</code> syntax to allow a more
 general clause, one that allows binding the results of tests as in the
 <code>=&gt;</code> clauses and user-defined meaning of the success &amp; failure of tests.</p>
 
 
-<H1>Rationale</H1>
+<h2>Rationale</h2>
 
 <p>The present set of <code>cond</code> clauses is based on simple boolean testing.  It
 is prohibitively inexpressive in that the condition part of a <code>cond</code>
@@ -50,7 +47,7 @@ be assigned on a per-clause basis, and it also allows the condition to
 return multiple values to be passed to the receiver.</p>
 
 
-<H1>Specification</H1>
+<h2>Specification</h2>
 
 <p>The <code>&lt;cond clause&gt;</code> production in the formal syntax of Scheme as written
 by R5RS in section 7.1.3 is extended with a new option:</p>
@@ -72,7 +69,7 @@ returns a false value, however, the clause is abandoned and the next
 one is tried.</p>
 
 
-<H1>Examples</H1>
+<h2>Examples</h2>
 
 <p>This <code>port-&gt;char-list</code> procedure accepts an input port and returns a list
 of all the characters it produces until the end.</p>
@@ -103,7 +100,7 @@ type of <code>cond</code> clause:</p>
 </blockquote>
 
 
-<H1>Implementation</H1>
+<h2>Implementation</h2>
 
 <p>The entirety of a syntax transformer for the new <code>cond</code> syntax is given
 here.  It uses an auxiliary macro, <code>cond/maybe-more</code>, to simplify the
@@ -156,7 +153,7 @@ code is in the public domain.</p>
 </blockquote>
 
 
-<H1>Copyright</H1>
+<h2>Copyright</h2>
 
 <p>Copyright (C) 2004 Taylor Campbell.  All rights reserved.</p>
 
