Disambiguate markup for parsing.
Add closing tags, explicitly mark paragraphs, use an XML-compatible
`DOCTYPE` declaration (while retaining SGML compatibility), and
generally avoid HTML quirks to enable parsing with a variety of parsers.

The resulting document has been tested with Racket’s `xml`;
Guile’s `(sxml simple)`; Python’s `html.parser`, `lxml`, `lxml-xml`,
and `html5lib`; various browsers; and the human eye.

--- a/srfi-61.html
+++ b/srfi-61.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN" "http://www.w3.org/TR/HTML32.dtd">
 <html lang="en">
   <head>
     <title>SRFI 61: A more general COND clause</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://srfi.schemers.org/srfi.css" type="text/css" />
-    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
+    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png" />
   </head>
 
   <body>
@@ -181,7 +181,7 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </p>
 
 
-    <hr>
+    <hr />
     <address>Editor: <a href="mailto:srfi minus editors at srfi dot schemers dot org">Mike Sperber</a></address>
 
   </body>
